fixed page jump when navigating to myprofile

--- a/laravel/sass/v2/posts/post.scss
+++ b/laravel/sass/v2/posts/post.scss
@@ -398,7 +398,7 @@
 
 						div.right-col {
 							.reply-links {
-								a.reply {
+								a.reply, a.edit {
 									color: $gray;
 									&:hover {
 										cursor: default;
